# pico-flight-controller

./: .gitignore  CMakeLists.txt
include/: pid.hpp  settings.h
include/math/: constants.hpp  filter.hpp  quarternion.hpp  vector.hpp
include/sensors/: bmp390.hpp  bmp390_macros.hpp  i2c.hpp  mpu6050.hpp
src/: bmp390.cpp  filter.cpp  i2c.cpp  i2c_slave_demo.cpp  main.cpp  mpu6050.cpp  pid.cpp  quarternion.cpp  test.cpp  vector.cpp
